# django_project_1

./: .gitignore  .pre-commit-config.yaml  pre-commit  pyproject.toml
django_project/: manage.py
django_project/django_project/: asgi.py  base.py  production.py  staging.py  urls.py  wsgi.py
django_project/projects/: admin.py  apps.py  models.py
django_project/projects/migrations/: 0001_initial.py  0002_initial.py
django_project/users/: admin.py  models.py
django_project/users/migrations/: 0001_initial.py
