[project]
name = "django-project-1"
version = "0.1.0"
description = ""
authors = [
    {name = "Vladimir Rusakov",email = "rvs1998@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "django (>=5.2.1,<6.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "djoser (>=2.3.1,<3.0.0)",
    "djangorestframework-simplejwt (>=5.5.0,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
